compiler/lume_parser/src/snapshots/lume_parser__parser__tests__class_snapshots@self_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            class Foo {\n                pub fn bar(self) -> bool {\n                    return true;\n                }\n            }\"#)"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        19..22,
                    ),
                },
                builtin: false,
                members: [
                    MethodDefinition(
                        MethodDefinition {
                            visibility: Public(
                                Public {
                                    location: Location(
                                        41..44,
                                    ),
                                },
                            ),
                            external: false,
                            name: Identifier {
                                name: "bar",
                                location: Location(
                                    48..51,
                                ),
                            },
                            parameters: [
                                Parameter {
                                    name: Identifier {
                                        name: "self",
                                        location: Location(
                                            52..56,
                                        ),
                                    },
                                    param_type: SelfType(
                                        SelfType {
                                            location: Location(
                                                52..56,
                                            ),
                                        },
                                    ),
                                    location: Location(
                                        52..56,
                                    ),
                                },
                            ],
                            type_parameters: [],
                            return_type: Some(
                                Scalar(
                                    ScalarType {
                                        name: "bool",
                                        location: Location(
                                            61..65,
                                        ),
                                    },
                                ),
                            ),
                            block: Block {
                                statements: [
                                    Return(
                                        Return {
                                            value: Some(
                                                Literal(
                                                    Boolean(
                                                        BooleanLiteral {
                                                            value: true,
                                                            location: Location(
                                                                95..99,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            ),
                                            location: Location(
                                                88..100,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    66..118,
                                ),
                            },
                            location: Location(
                                45..118,
                            ),
                            documentation: None,
                        },
                    ),
                ],
                type_parameters: [],
                location: Location(
                    13..132,
                ),
                documentation: None,
            },
        ),
    ),
]
