compiler/lume_parser/src/snapshots/lume_parser__parser__tests__conditional_snapshots@if_else_if_empty.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"if true { } else if false { }\")"
---
[
    If(
        IfCondition {
            cases: [],
            location: Location(
                0..29,
            ),
        },
    ),
]
