compiler/lume_parser/src/snapshots/lume_parser__parser__tests__conditional_snapshots@if_statement-2.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"if true { let a = 0; }\")"
---
[
    If(
        IfCondition {
            cases: [],
            location: Location(
                0..22,
            ),
        },
    ),
]
